// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[coursesThunk] should createCourseThunk dispatches saveCourse 1`] = `
Array [
  Object {
    "payload": Object {
      "authors": Array [
        "9b87e8b8-6ba5-40fc-a439-c4e30a373d36",
        "1c972c52-3198-4098-b6f7-799b45903199",
        "072fe3fc-e751-4745-9af5-aa9eed0ea9ed",
      ],
      "creationDate": "11/03/2024",
      "description": "Description 1",
      "duration": 5,
      "id": "b28fd9ad-c683-4900-bf99-38a1c5748309",
      "title": "New course",
    },
    "type": "courses/saveCourse",
  },
]
`;

exports[`[coursesThunk] should deleteCourseThunk dispatches deleteCourse 1`] = `
Array [
  Object {
    "payload": "mockId",
    "type": "courses/deleteCourse",
  },
]
`;

exports[`[coursesThunk] should getCoursesThunk dispatches setCourses 1`] = `
Array [
  Object {
    "payload": Array [
      Object {
        "authors": Array [
          "9b87e8b8-6ba5-40fc-a439-c4e30a373d36",
          "1c972c52-3198-4098-b6f7-799b45903199",
          "072fe3fc-e751-4745-9af5-aa9eed0ea9ed",
        ],
        "creationDate": "11/03/2024",
        "description": "Description 1",
        "duration": 5,
        "id": "b28fd9ad-c683-4900-bf99-38a1c5748309",
        "title": "Course 1",
      },
    ],
    "type": "courses/setCourses",
  },
]
`;

exports[`[coursesThunk] should updateCourseThunk dispatches updateCourse 1`] = `
Array [
  Object {
    "payload": Object {
      "authors": Array [
        "9b87e8b8-6ba5-40fc-a439-c4e30a373d36",
        "1c972c52-3198-4098-b6f7-799b45903199",
        "072fe3fc-e751-4745-9af5-aa9eed0ea9ed",
      ],
      "creationDate": "11/03/2024",
      "description": "Description 1",
      "duration": 5,
      "id": "b28fd9ad-c683-4900-bf99-38a1c5748309",
      "title": "Modified",
    },
    "type": "courses/updateCourse",
  },
]
`;
